# generals-bot

./: .gitignore  0q1de54r.vcd~  ArmyAnalyzer.py  ArmyTracker.py  BasicPath.py  BoardAnalyzer.py  DataModels.py  Directives.py  History.py  MainTodo2.txt  MentalFramework.txt  Path.py  README.md  SearchUtils.py  TODO.txt  Territory.py  ViewInfo.py  bot_ek0x45.py  bot_ek0x45v2.py  dangerAnalyzer.py  gather.py  generals-bot.pyproj  more_ideas.txt  pyproject.toml  run-bot.ps1  run.sh  ruv3qv2b.lf1~  startup.py
Directives/: BasicPath.py  Directives.py
base/: bot_base.py  viewer.py
base/client/: generals.py  map.py
generals_bot/: ArmyAnalyzer.py  ArmyTracker.py  BasicPath.py  BoardAnalyzer.py  DataModels.py  Directives.py  History.py  Path.py  SearchUtils.py  Territory.py  bot_blob.py  bot_control.py  bot_ek0x45.py  bot_ek0x45v2.py  bot_path_collect.py  bot_test.py  dangerAnalyzer.py  gather.py  startup.py
generals_bot/base/: bot_base.py  bot_moves.py  viewer.py
generals_bot/base/client/: bot_cmds.py  constants.py  generals.py  generals_api.py  map.py  tile.py
generals_bot/tools/: playerstats.py
