[tool.poetry]
name = "generals-bot"
version = "0.1.0"
description = ""
authors = ["George Shammas <george@shamm.as>"]

[tool.poetry.dependencies]
python = "^3.7"
websocket-client  = "*"
pygame = "*"
requests = "*"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
