[tool.poetry]
name = "generals-bot"
version = "0.1.0"
description = ""
authors = ["George Shammas <george@shamm.as>"]

[tool.poetry.dependencies]
python = "^3.8"
websocket-client = "^0.57.0"
pygame = "^1.9.6"

[tool.poetry.dev-dependencies]
black = "^19.10b0"
pylint = "^2.4.4"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
